--- a/WPF_Quiz/Quiz.xaml
+++ b/WPF_Quiz/Quiz.xaml
@@ -7,10 +7,10 @@
         mc:Ignorable="d"
         Title="Quiz" Height="450" Width="800">
     <Grid Background="#040c0e">
-        <Viewbox>
+        <StackPanel>
             <Label x:Name="timerLabel" Foreground="White" HorizontalAlignment="Center" Content="00:00" FontWeight="Bold" FontSize="25"></Label>
 
-        </Viewbox>
+        </StackPanel>
         <StackPanel Margin="0, 25, 0, 0">
             <Label x:Name="Previous_resultslabel" Content="eddigi eredményei: " Foreground="White"></Label>
             <TextBox x:Name="Previous_resultstext" Height="50" IsReadOnly="True"></TextBox>
