--- a/WPF_Quiz/MainWindow.xaml
+++ b/WPF_Quiz/MainWindow.xaml
@@ -21,7 +21,7 @@
                 <Label Foreground="White" FontSize="15" Content="Adja meg a kérdések számát: "></Label>
                 <Slider x:Name="QuestionNumberSlider" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="120" Minimum="3" Maximum="15" TickPlacement="BottomRight" IsSnapToTickEnabled="True" TickFrequency="3"  AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"/>
                 
-                <GroupBox Header="Több válaszos kérdés" >
+                <GroupBox Header="Több válaszos kérdések is?" >
                     <StackPanel Orientation="Horizontal">
                         <RadioButton Foreground="White" Name="MultipleAnswer_YesButon" Content="Igen" Margin="25,0,50,0" Click="MultipleAnswer_YesClick" />
                         <RadioButton Foreground="White" Name="MultipleAnswer_NoButon" Content="Nem" Click="MultipleAnswer_NoClick" />
