--- a/WPF_Quiz/Quiz.xaml
+++ b/WPF_Quiz/Quiz.xaml
@@ -1,39 +1,43 @@
 ﻿<Page x:Class="WPF_Quiz.Quiz"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_Quiz"
-        mc:Ignorable="d"
-        Title="Quiz" Height="450" Width="800">
-    <Grid Background="#040c0e">
-        <StackPanel>
-            <Label x:Name="timerLabel" Foreground="White" HorizontalAlignment="Center" FontWeight="Bold" FontSize="25"></Label>
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:WPF_Quiz"
+      mc:Ignorable="d"
+      Title="Quiz" Height="450" Width="800">
+
+    <Grid Background="#19232F">
+        <StackPanel Margin="20">
+            <Label x:Name="timerLabel" Content="00:00" Foreground="White" HorizontalAlignment="Center" FontWeight="Bold" FontSize="25"/>
         </StackPanel>
-        <StackPanel Margin="0, 25, 0, 0">
-            <Label x:Name="Previous_resultslabel" Content="eddigi eredményei: " Foreground="White"></Label>
-            <TextBox x:Name="Previous_resultstext" Height="65" IsReadOnly="True"></TextBox>
-            <Label Content="Témakör:" Foreground="White"></Label>
-            <TextBox x:Name="Topic_text" Height="30" IsReadOnly="True"></TextBox>
-            <Label x:Name="QuestionLabel" Content="Kérdés:" Foreground="White"></Label>
-            <TextBox x:Name="Questions_text" Height="30" IsReadOnly="True"></TextBox>
-            <Grid>
+
+        <StackPanel Margin="25">
+            <Label x:Name="Previous_resultslabel" Content="Eddigi eredményei:" Foreground="White" FontSize="16"/>
+            <TextBox x:Name="Previous_resultstext" Height="65" IsReadOnly="True" Background="#1E2A38" Foreground="White" FontSize="14"/>
+            <Label Content="Témakör:" Foreground="White" FontSize="16"/>
+            <TextBox x:Name="Topic_text" Height="30" IsReadOnly="True" Background="#1E2A38" Foreground="White" FontSize="14"/>
+            <Label x:Name="QuestionLabel" Content="Kérdés:" Foreground="White" FontSize="16"/>
+            <TextBox x:Name="Questions_text" Height="30" IsReadOnly="True" Background="#1E2A38" Foreground="White" FontSize="14"/>
+
+            <Grid Margin="0,20,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <Grid x:Name="Answers_Grid" Grid.Column="0" Background="#101316">
-                    <RadioButton x:Name="Answer1_button" Foreground="White" Margin="10,5,0,0"  Click="Answer1_Click"/>
-                    <RadioButton x:Name="Answer2_button" Foreground="White" Margin="10,25,0,0" Click="Answer2_Click"/>
-                    <RadioButton x:Name="Answer3_button" Foreground="White" Margin="10,45,0,0" Click="Answer3_Click"/>
-                    <RadioButton x:Name="Answer4_button" Foreground="White" Margin="10,65,0,5" Click="Answer4_Click"/>
+                <Grid x:Name="Answers_Grid" Grid.Column="0" Background="#1E2A38">
+                    <RadioButton x:Name="Answer1_button" Content="Válasz 1" Foreground="White" Margin="10,5,0,0"  Click="Answer1_Click"/>
+                    <RadioButton x:Name="Answer2_button" Content="Válasz 2" Foreground="White" Margin="10,25,0,0" Click="Answer2_Click"/>
+                    <RadioButton x:Name="Answer3_button" Content="Válasz 3" Foreground="White" Margin="10,45,0,0" Click="Answer3_Click"/>
+                    <RadioButton x:Name="Answer4_button" Content="Válasz 4" Foreground="White" Margin="10,65,0,5" Click="Answer4_Click"/>
                 </Grid>
                 <Grid x:Name="Image_Grid" Grid.Column="1">
                     <Image x:Name="QuestionImage" HorizontalAlignment="Left" Height="84" VerticalAlignment="Top" />
                 </Grid>
             </Grid>
-            <Button x:Name="NextQuestion_button" Content="Következő kérdés" HorizontalAlignment="Center" Margin="0,20,0,0" Width="436" Height="50" Foreground="Black" FontFamily="Arial Black" FontSize="18" Click="NextQuestionClick" IsEnabled="False"/>
-            <Button x:Name="Results_button" Content="Eredmények" HorizontalAlignment="Center" Margin="0,20,0,0" Width="436" Height="50" Foreground="Black" FontFamily="Arial Black" FontSize="18" IsEnabled="False" Click="Results_Click"/>
+
+            <Button x:Name="NextQuestion_button" Content="Következő kérdés" HorizontalAlignment="Center" Margin="0,20,0,0" Width="436" Height="50" Foreground="White" FontFamily="Arial Black" FontSize="18" Click="NextQuestionClick" IsEnabled="False" Background="#2C3E50"/>
+            <Button x:Name="Results_button" Visibility="Hidden" Content="Eredmények" HorizontalAlignment="Center" Margin="0,-50,0,0" Width="436" Height="50" Foreground="White" FontFamily="Arial Black" FontSize="18" Click="Results_Click" Background="#2C3E50"/>
         </StackPanel>
         <Frame x:Name="MainFrame"/>
     </Grid>
